--- a/urbanNestWeb/package.json
+++ b/urbanNestWeb/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.63.0",
     "react-router": "^7.9.2",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
